--- a/jschallangelast/css/backgroundimage.css
+++ b/jschallangelast/css/backgroundimage.css
@@ -1,6 +1,8 @@
 .backgroundimage {
   height: 100vh;
+  width: 100%;
   margin: 0;
+  position: absolute;
   display: flex;
   justify-content: center;
   overflow: hidden;
