--- a/jschallangelast/css/login.css
+++ b/jschallangelast/css/login.css
@@ -1,3 +1,8 @@
+.logindiv {
+  width: 100%;
+  height: 100%;
+}
+
 #loginform {
   width: 100%;
   height: 100%;
@@ -13,7 +18,7 @@
 .appName {
   width: 100%;
   height: 100%;
-  position: absolute;
+  position: fixed;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -21,6 +26,7 @@
   top: -30vh;
   color: white;
   text-shadow: 10px 5px 10px black;
+  z-index: 1;
 }
 
 .clicktwice {
