--- a/jschallangelast/css/backgroundimage.css
+++ b/jschallangelast/css/backgroundimage.css
@@ -2,15 +2,16 @@
   height: 100vh;
   width: 100%;
   margin: 0;
-  position: absolute;
+  position: fixed;
   display: flex;
   justify-content: center;
-  overflow: hidden;
+  overflow: clip;
+  z-index: -1;
 }
 
 .randombackgroundimage {
   width: auto;
-  height: 100vh;
+  height: 100%;
   position: fixed;
   z-index: -1;
 }
