--- a/jschallangelast/css/body.css
+++ b/jschallangelast/css/body.css
@@ -2,9 +2,14 @@
   margin: 0;
   width: 100vw;
   height: 100vh;
+}
+.mainwindow {
+  width: 100vw;
+  height: 100%;
   position: relative;
   overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: flex-end;
+  right: 0px;
 }
