--- a/jschallangelast/css/timer.css
+++ b/jschallangelast/css/timer.css
@@ -22,7 +22,7 @@
   font-size: 6vh;
   text-shadow: 10px 5px 10px black;
   margin-left: 2vw;
-  margin-bottom: -3.5%;
+  margin-bottom: -1.5vh;
 }
 
 .time {
