--- a/css/backgroundimage.css
+++ b/css/backgroundimage.css
@@ -16,9 +16,21 @@
   z-index: -1;
 }
 
-.randomlogindimage {
-  width: auto;
+.loginimg {
+  margin: 0;
+  width: 100vw;
   height: 100vh;
+  top: 0;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  overflow: clip;
+  z-index: -1;
+}
+
+.randomloginimage {
+  width: auto;
+  height: 100%;
   position: fixed;
   z-index: -1;
 }
