--- a/css/body.css
+++ b/css/body.css
@@ -13,3 +13,13 @@
   align-items: flex-end;
   right: 0px;
 }
+.secondwindow {
+  width: 100vw;
+  height: 100%;
+  position: relative;
+  overflow: hidden;
+  display: none;
+  justify-content: center;
+  align-items: flex-end;
+  right: 0px;
+}
