--- a/css/pageright.css
+++ b/css/pageright.css
@@ -1,9 +1,10 @@
 .pageright {
   width: 10vw;
-  height: 5vh;
+  height: 15vh;
   position: fixed;
-  background-color: red;
-  top: 30vh;
+  border: 0;
+  background-color: rgba(0, 0, 0, 0);
+  top: 60vh;
   right: 0vw;
   border-radius: 6px 0px 0px 6px;
   z-index: 3;
@@ -11,11 +12,23 @@
 
 .pageleft {
   width: 10vw;
-  height: 5vh;
+  height: 15vh;
   position: fixed;
-  background-color: blue;
-  top: 30vh;
+  border: 0;
+  background-color: rgba(255, 0, 0, 0);
+  top: 60vh;
   left: 0vw;
   border-radius: 0px 6px 6px 0px;
   z-index: 3;
+}
+
+.arrowright {
+  position: fixed;
+  max-width: 15vw;
+  right: 0px;
+}
+.arrowleft {
+  position: fixed;
+  left: 0;
+  max-width: 15vw;
 }
